# Calliope || Cargo.toml
# --------------------------------
# Rust manifest file.
#
# Authors: @MaxineToTheStars <https://github.com/MaxineToTheStars>
# ----------------------------------------------------------------

# Package Info
[package]
name = "calliope"
version = "0.1.0"
authors = ["@MaxineToTheStars <https://github.com/MaxineToTheStars>"]
edition = "2021"
rust-version = "1.56.0"
description = "A hardware based voice modulator"
readme = "README.md"
homepage = "https://github.com/MaxineToTheStars/calliope"
repository = "https://github.com/MaxineToTheStars/calliope.git"
license = "GPL-3.0-only"
keywords = []
categories = []
build = true

# Dependencies
[dependencies]
log = { version = "0.4.21" }
esp-hal = { version = "0.17.0", features = ["esp32s2", "log", "embassy", "embassy-time-systick-80mhz"] }
# esp-wifi = { version = "0.5.1", features = ["esp32s2", "wifi", "esp-now"] }
esp-println = { version = "0.9.1", features = ["esp32s2", "log"] }
esp-backtrace = { version = "0.11.1", features = ["esp32s2", "panic-handler", "exception-handler", "println"] }

# Debugging Profile
[profile.dev]
opt-level = "s"

# Release Profile
[profile.release]
lto = "fat"
debug = 1
opt-level = 3
incremental = false
codegen-units = 1
overflow-checks = false
debug-assertions = false
